Updated to Vaadin 24.3.3 and JDK 17